[package]
name = "A-star-algorithm-rust"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.sfml]
# version = "0.15.1"
# features = ["graphics"]
[dependencies]
sfml = "0.15.1"
rand = "0.8.0"
